# 2020_rover

./: README.md
2020_rover/: CMakeLists.txt  package.xml
aruco_controller/: CMakeLists.txt  package.xml
aruco_controller/config/: params.yaml
box_detect/: CMakeLists.txt  package.xml
find_centre/: README.txt
find_centre-master/: CMakeLists.txt  package.xml
find_centre-master/launch/: default.launch
find_centre-master/msg/: Centre.msg
find_centre-master/src/: findc_node.cpp
obstacle_avoidance/: CMakeLists.txt  package.xml
pose_control/: CMakeLists.txt  package.xml
rover_aruco/: CMakeLists.txt  package.xml
rover_aruco/aruco_ros/aruco_ros/launch/: double.launch  marker_publisher.launch  single.launch
rover_aruco/aruco_ros/aruco_ros/msg/: Centre.msg
rover_aruco/aruco_ros/aruco_ros/src/: marker_publish.cpp  simple_double.cpp  simple_single.cpp  try.cpp
rover_aruco/fallback/: CMakeLists.txt  package.xml
rover_aruco/fallback/cfg/: params.yaml
rover_aruco/fallback/launch/: default.launch
rover_aruco/fallback/src/: detector_node.cpp  to_centre.cpp
rover_aruco/launch/: default.launch
rover_aruco/msg/: Centre.msg
rover_aruco/src/: detector.cpp  detector_node.cpp  to_centre.cpp
rover_aruco_detector/: CMakeLists.txt  package.xml
rover_aruco_detector/config/: aruco_centre_params.yaml  pose_estimation_params.yaml
rover_aruco_detector/include/rover_aruco_detector/: aruco_centre.hpp  aruco_marker_detect.hpp  pose_estimation.hpp
rover_aruco_detector/launch/: rover_aruco.launch
rover_aruco_detector/src/: aruco_centre.cpp  aruco_centre_node.cpp  aruco_marker_detect.cpp  aruco_marker_detect_node.cpp  pose_estimation.cpp  pose_estimation_node.cpp
rover_assign_2/: CMakeLists.txt  package.xml
rover_avoidance/: CMakeLists.txt  package.xml
rover_avoidance/launch/: default.launch
rover_avoidance/src/: avoidance.cpp
rover_box_detector/: CMakeLists.txt  package.xml
rover_box_detector/launch/: center.launch
rover_box_detector/src/: box_detect_node.cpp
rover_control/: CMakeLists.txt  package.xml
rover_control/src/: command_node.cpp  control.cpp  target.cpp  velocity.cpp
rover_controller/: CMakeLists.txt  package.xml
rover_controller/config/: rover_control.yaml
rover_controller/launch/: default.launch  spawn_rover.launch
rover_controller/rover/cfg/: detect_box.yaml
rover_controller/rover/launch/: detect.launch  rover.launch
rover_controller/rover/src/: detect.cpp  detect_node.cpp
rover_controller/rover/world/terrain_world/: model.config  model.sdf
rover_controller/rover_position_control/include/rover_position_control/: rover_gps.hpp  rover_pose_control.hpp
rover_controller/rover_position_control/launch/: rover_pose_control.launch
rover_controller/rover_position_control/src/: heading_node.cpp  rover_gps_world.cpp  rover_position_control.cpp  rover_position_control_node.cpp
rover_controller/rover_position_gps_control/src/: rover_position_control.cpp
rover_controller/rover_vel_control/: package.xml
rover_controller/rover_vel_control/include/rover_vel_control/: vel_cntrl.hpp
rover_controller/rover_vel_control/launch/: vel_cntrl.launch
rover_controller/rover_vel_control/src/: rover_vel.cpp
rover_controller/src/: command_node.cpp  gps_controller.cpp  gps_node.cpp  pose_navigation_node.cpp  position_input.cpp  velocity_controller.cpp  velocity_input.cpp
rover_controller/tutorial_first/: CMakeLists.txt  package.xml
rover_controller/tutorial_first/include/rover/: detect_box.hpp
rover_controller/urdf/: rover_description.urdf
rover_controller/worlds/: mars.world
rover_driver/: CMakeLists.txt  package.xml
rover_obstacle_avoidance/: CMakeLists.txt  package.xml
rover_obstacle_avoidance/config/: obstacle_avoid_params.yaml
rover_obstacle_avoidance/include/rover_obstacle_avoidance/: obstacle_avoid.hpp
rover_obstacle_avoidance/launch/: rover_obstacle_avoid.launch
rover_obstacle_avoidance/src/: obstacle_avoid.cpp  obstacle_avoid_node.cpp
rover_position_control/: CMakeLists.txt  package.xml
rover_position_control/include/rover_position_control/: rover_gps.hpp  rover_pose_control.hpp
rover_position_control/launch/: rover_pose_control.launch
rover_position_control/src/: heading_node.cpp  rover_gps_world.cpp  rover_gps_world_node.cpp  rover_position_control.cpp
rover_sim/: CMakeLists.txt  package.xml
rover_sim/config/: rover_control.yaml  voxblox_params.yaml
rover_sim/launch/: default.launch  spawn_mav.launch  spawn_rover.launch  voxblox.launch
rover_sim/models/flag/: model.sdf
rover_sim/models/flag/meshes/: flag.dae
rover_sim/models/takeoff_zone/: model.config
rover_sim/rviz/: default.rviz
rover_sim/urdf/: mav_with_vi_sensor.gazebo  rover_description.urdf
rover_sim/worlds/: aruco.world  obstacle.world
rover_vel_control/: CMakeLists.txt
rover_vel_control/include/rover_vel_control/: vel_cntrl.hpp
rover_vel_control/src/: rover_vel.cpp  rover_vel_node.cpp
rover_voxblox_planner/: CMakeLists.txt  package.xml
rover_voxblox_planner/include/voxblox_planner/: graph_def.hpp  point_sampler.hpp  publish_waypoint.hpp  voxblox_planner.hpp
rover_voxblox_planner/src/: publish_waypoint.cpp  publish_waypoint_node.cpp  voxblox_planner.cpp  voxblox_planner_node.cpp
voxblox_local_planner/: CMakeLists.txt  package.xml
voxblox_local_planner/cfg/: params.yaml
voxblox_local_planner/include/voxblox_local_planner/: graph_def.hpp  local_planner.hpp  path_finder.hpp
voxblox_local_planner/launch/: default.launch
voxblox_local_planner/src/: local_planner.cpp  path_finder.cpp  voxblox_local_planner_node.cpp
voxblox_planner/: CMakeLists.txt  package.xml
voxblox_planner/config/: planner.yaml
voxblox_planner/include/voxblox_planner/: graph_def.hpp  path_shortening.h  point_sampler.hpp  publish_waypoint.hpp  voxblox_planner.hpp
voxblox_planner/launch/: path_plan.launch
voxblox_planner/src/: graph_def.cpp  point_sampler.cpp  publish_waypoint.cpp  voxblox_planner.cpp
voxblox_planner/src/voxblox_planner/: PlannerService.h  graph_def.hpp  point_sampler.hpp  voxblox_planner.hpp
(+54 files in other folders)
