<?xml version="1.0"?>
<package format="2">
  <name>find_centre</name>
  <version>0.0.0</version>
  <description>The package to find centre </description>

  <maintainer email="dcjadhav@iitk.ac.in">Dnyandeep Jadhav</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
