<?xml version="1.0"?>
<package format="2">
  <name>rover_aruco</name>
  <version>0.0.0</version>
  <description>The simulator package</description>

  <maintainer email="pushpanshu@todo.todo">me</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
