<?xml version="1.0"?>
<package format="2">
  <name>rover_aruco_detector</name>
  <version>0.0.0</version>
  <description>The rover_aruco_detector package</description>

  <maintainer email="sanjayso@iitk.ac.in">Sanjay Sukumaran</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>dynamic_reconfigure</depend>

</package>
