<?xml version="1.0"?>
<package format="2">
  <name>rover_avoidance</name>
  <version>0.0.0</version>
  <description>The rover_avoidance package</description>

  <maintainer email="prateekj@iitk.ac.in">Prateek Jain</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
