<?xml version="1.0"?>
<package format="2">
  <name>rover_box_detector</name>
  <version>0.0.0</version>
  <description>The box_detect package</description>

  <maintainer email="grvk@iitk.ac.in">Gaurav Kumar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

</package>
