<?xml version="1.0"?>
<package format="2">
    <name>rover_voxblox_planner</name>
    <version>0.0.0</version>
    <description>
    Planning with voxblox
    </description>

    <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>
    <author email="sanjasyso@iitk.ac.in">Sanjay Sukumaran</author>

    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>
    <maintainer email="sanjasyso@iitk.ac.in">Sanjay Sukumaran</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>voxblox_ros</depend>
    <depend>mav_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>mav_planning_msgs</depend>

</package>
