<?xml version="1.0"?>
<package format="2">
  <name>voxblox_local_planner</name>
  <version>0.0.0</version>
  <description>
    Local planning with voxblox skeletons.
  </description>

  <author email="prateekj@iitk.ac.in">Prateek Jain</author>
  

  <maintainer email="prateekj@iitk.ac.in">Prateek Jain</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox_ros</depend>
  <depend>rviz_visualizer</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>ariitk_planning_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
