<?xml version="1.0"?>
<package format="2">
    <name>voxblox_planner</name>
    <version>0.0.0</version>
    <description>
    Planning with voxblox
    </description>

    <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>

    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>voxblox_ros</depend>
    <depend>mav_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>mav_planning_msgs</depend>

</package>
